--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,37 +1,38 @@
 @import "reset";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
 @import "corrections/index.css";
+@import "devise/sessions/new.css";
 
 a {
   text-decoration:none 
 }
 
 .top-menu {
-  background-color: #040419;
+  background-color: #ebeded;
   display: flex;
   width: 100vw;
-  height: 110px;
+  height: 69px;
   margin: 0px;
+  padding: 31px 31px 0px 31px;
 }
 
 .menu-icon {
-  width: 35px;
-  margin: 35px;
 }
 
 .rogo {
   height: 50px;
-  margin-top: 32px;
+  margin-left: 35px;
 }
 
 .rogin-menu {
   font-size: 16px;
-  margin-top: 40px;
+  margin-top: 6px;
   margin-left: calc(100vw - 128.27px - 105px - 130px);
   font-family: 'Noto Sans JP', sans-serif;
+  font-weight: 400; 
 }
 .rogin {
-  color: #dedede;
+  color: #606060;
   text-decoration: none;
 }
 
@@ -40,3 +41,6 @@ a {
   background-color: #040419;
   height: calc(100vh - 110px - 200px);
 }
+
+*= require_tree .
+*= require_self
