--- a/app/assets/stylesheets/corrections/index.css
+++ b/app/assets/stylesheets/corrections/index.css
@@ -1,5 +1,57 @@
-.latest {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 20px;
-  color: #ffec7d;
+
+
+.collection-room{
+  background-color: white;
+  width: 100%;
+  height: 860px;
+  text-align: center;
+}
+.collection-bg {
+  text-align: center;
+}
+
+/* 下記からは配置用CSS */
+
+
+#note_base {
+	position:relative;
+	max-width:600px;
+}
+#note_base > img {
+	max-width:100%;
+	pointer-events:none;
+}
+.note {
+	position:absolute;
+}
+.note textarea {
+	margin-top:0.5em;
+	overflow:hidden;
+	background-color:transparent;
+	border:0;
+	border-bottom:1px solid white;
+	border-left:1px solid white;
+	color:white;
+}
+.note span.mark {
+	display:inline-block;
+	position:absolute;
+	top:-0.3em;
+	left:-0.3em;
+	cursor:pointer;
+	border-radius:50%;
+	width:0.8em;
+	height:0.8em;
+	background-color:white;
+}
+.note span.remove {
+	display:inline-block;
+	position:absolute;
+	right:0;
+	top:0;
+	cursor:pointer;
+	color:white;
+}
+.note span.remove:hover {
+	color:red;
 }
