--- a/app/views/corrections/index.html.erb
+++ b/app/views/corrections/index.html.erb
@@ -1,8 +1,14 @@
-<div class="wall">
-  <div class="latest">フォローアーティストの近況</div>
-
-  <div class="latest_arts">
-    <%= link_to image_tag("sika.jpeg", class:"la_art") %>
-
+<div class="collection-room">
+  <%= link_to image_tag("room.jpg")%>
+  <div style="display:none;">
+      <img id="source" src="01.jpg" width="300">
+  </div>
+  <div class="collection-images">
+    <ul class="collection-lists">
+      <li class="collection-list"></li>
+      <li class="collection-list"></li>
+      <li class="collection-list"></li>
+      <li class="collection-list"></li>
+    </ul>
   </div>
 </div>
