--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,31 @@
   <% unless current_page?(new_user_session_path) %>
     <header>
       <div class="top-menu">
-        <div class="menu_icon">
-          <%= link_to image_tag("menu_icon.png", class:"menu-icon") %>
+        <div>
+          <%= link_to image_tag("menu_icon.png", id:"manu-icon", class:"m-icon") %>
         </div>
         <div>
           <%= link_to image_tag("rogo_color.png", class:"rogo") , root_path %>
         </div>
         <div class="rogin-menu">
+          <%= link_to image_tag("rogin.png") , new_user_session_path ,class:"rogin_image" %> 
           <%= link_to "ログイン" , new_user_session_path ,class:"rogin" %>
         </div>
+      </div>
+
+      <ul class="show-lists hidden" id="pull-down">
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("collecter.png") %></div>コレクターモード</li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("myroom.png"), url:root_path  %></div><%= link_to "マイコレクションルーム" ,root_path %></li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("collection.png") %></div>マイコレクション</li>
+        <li class="border"></div>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("collecter.png") %></div>コレクター</li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("artist_mark.png") %></div>アーティスト</li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("sakaguti.png") %></div>坂口 恭平</li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("banksy.png") %></div>BANKSY</li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("t-t.png") %></div>Charles Chaplin</li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("a-w-w.png") %></div>艾未未</li>
+        <li class="pull-down-list"><div class="manu-image"><%= link_to image_tag("other.png") %></div>その他表示</li>
+      </ul>
       </div>
     </header>
   <% end %>
