--- a/app/views/corrections/index.html.erb
+++ b/app/views/corrections/index.html.erb
@@ -1,14 +1,3 @@
-<div class="collection-room">
-  <%= link_to image_tag("room.jpg")%>
-  <div style="display:none;">
-      <img id="source" src="01.jpg" width="300">
-  </div>
-  <div class="collection-images">
-    <ul class="collection-lists">
-      <li class="collection-list"></li>
-      <li class="collection-list"></li>
-      <li class="collection-list"></li>
-      <li class="collection-list"></li>
-    </ul>
-  </div>
+<div class="top-images"> 
+  <%= link_to image_tag('mobilhouse.jpg') %>
 </div>
